<resources>
    <string name="app_name">Picklon</string>
    <string name="intro_1_title">Meet Our Pickup Pilot</string>
    <string name="intro_1">We collect your dirty clothes from your doorsteps</string>
    <string name="intro_2_title">Dress Up Next Day</string>
    <string name="intro_2">We bring your fresh clothes back the very next day</string>
    <string name="intro_3_title">Fast Delivery</string>
    <string name="sign_intro">We Pickup, Wash and Delivery your Laundry</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="login_in">Log In</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="register_tips">Register with your mobile number, and log in</string>
    <string name="register_verify">Verify</string>
    <string name="register_verify_code">Verify Code</string>
    <string name="register_password">Password (No less than 6 digits)</string>
    <string name="new_password">New Password (No less than 6 digits)</string>
    <string name="register_agree">I agree with&#160;</string>
    <string name="register_terms">terms and conditions</string>
    <string name="network_error">网络连接失败</string>
    <string name="ok">OK</string>
    <string name="field_tips">请将所有项填写完整</string>
    <string name="terms_tips">您必须接受协议才能继续</string>
    <string name="terms_service">TERM OF SERVICE</string>
    <string name="read_accept">Read and Accept</string>
    <string name="verify_code_error">验证码发送失败,请稍后重试</string>
    <string name="resend_code_tips">%d 秒后重发</string>
    <string name="picklon_logo">PICK<b>LON</b></string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="address_add_new">ADD NEW ADDRESS</string>
    <string name="my_address">MY ADDRESS</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="delete_selected">DELETE SELECTED</string>
    <string name="select_all">SELECT ALL</string>
    <string name="edit_address">EDIT ADDRESS</string>
    <string name="city_3">City 3</string>
    <string name="area_5">Area 5</string>
    <string name="street_number">Street Number</string>
    <string name="choose_from_maps">Choose from maps</string>
    <string name="default_address">Default address</string>
    <string name="my_wallet">My Wallet</string>
    <string name="redeem_coupon">Redeem Coupon</string>
    <string name="coupons">Coupons</string>
    <string name="account_record">Account Record</string>
    <string name="redeem_fill_code">Fill in redeem code</string>
    <string name="redeem_my_coupon">REDEEM MY COUPON</string>
    <string name="regulation">*Regulation</string>
    <string name="coupon123">COUPON123</string>
    <string name="redeem_more_coupon">REDEEM MORE COUPON</string>
    <string name="description">Description:</string>
    <string name="order_id">Order ID</string>
    <string name="pick_up_time">Pick up time</string>
    <string name="colon">:</string>
    <string name="become_partner">BECOME PARTNER</string>
    <string name="email">Email</string>
    <string name="interesting_thing">interesting thing &#8230;</string>
    <string name="submit">SUBMIT</string>
    <string name="share_to_friends">SHARE TO FRIENDS</string>
    <string name="setting">SETTING</string>
    <string name="term_of_service">Term of Service</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="notification">Notification</string>
    <string name="voice">Voice</string>
    <string name="setting_version">Version %s</string>
    <string name="fanpage">Fanpage</string>
    <string name="feedback_hint">Please leave your feedback</string>
    <string name="feedback_char_left">Characters left: %d</string>
    <string name="instagram">Instagram</string>
    <string name="sms">SMS</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="website">Website</string>
    <string name="status">Status</string>
    <string name="new_order">New Order</string>
    <string name="wash_fold">Wash &amp; Fold</string>
    <string name="wash_iron">Wash &amp; Iron</string>
    <string name="iron_only">Iron Only</string>
    <string name="spinner_hint">Choose Service</string>
    <string name="kg">KG</string>
    <string name="carpet">Carpet</string>
    <string name="unit_meters">m²</string>
    <string name="pick_up_address">Pick up address</string>
    <string name="deliver_time">Deliver time</string>
    <string name="special_requirements">Special Requirements</string>
    <string name="send_order">SEND ORDER</string>
    <string name="zero">0</string>
    <string name="service">Service</string>
    <string name="tips_value">Choose tips value</string>
    <string name="tips_introduction">*More tips value will accelerate the pick up</string>
    <string name="unit_rp">Rp.%s,-</string>
    <string name="estimated">(Estimated)</string>
    <string name="request_received">Request received!</string>
    <string name="waiting_pick_up">Finding best offering store to pick up.</string>
    <string name="order_cost">Order Cost</string>
    <string name="tips">Tips</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="picklon_successful">PICKLON Successful!</string>
    <string name="pickup_coming">Pickup Pilot is coming</string>
    <string name="keep_phone_online">Keep your mobile phone online</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="not_come">Not Come</string>
    <string name="picked_up">Picked Up</string>
    <string name="pickup_not_come">Pickup Pilot Not Come</string>
    <string name="pickup_pilot">Pickup Pilot</string>
    <string name="store">Store</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="baskets">baskets: %d</string>
    <string name="item_total">Item Total: %d</string>
    <string name="confirm_items">Confirm Items</string>
    <string name="item_list">ITEM LIST</string>
    <string name="carpet_only">Carpet Only</string>
    <string name="dimension">Dimension</string>
    <string name="payment">Payment</string>
    <string name="check_out">Check Out</string>
    <string name="total_price">Total Price</string>
    <string name="text_baskets">Baskets</string>
    <string name="deliver_free">Deliver Fee</string>
    <string name="discount">Discount</string>
    <string name="cash_pay">Cash Pay</string>
    <string name="confirm_to_pay">CONFIRM TO PAY</string>
    <string name="my_order">MY ORDER</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_status">ORDER STATUS</string>
    <string name="deliver_confirm">DELIVER CONFIRM</string>
    <string name="store_id">Store ID</string>
    <string name="total_item">Total Item</string>
    <string name="order_price">Order Price</string>
    <string name="ratting_and_comments">Ratting and Comments</string>
    <string name="rating_order">Rating order</string>
    <string name="my_comments">My comments:</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="change_mobile">Change Mobile Number</string>
    <string name="confirm_to_change">Confirm To Change</string>
    <string name="change_mobile_text">Keep your profile same, Log in with new mobile number.</string>
    <string name="re_login">ReLogin</string>
    <string name="logout">Logout</string>
    <string name="mobile_number_text">is your existing mobile phone number</string>
    <string name="change_mobile_number">Change mobile number</string>
    <string name="phone_with_code">+62 %s</string>
    <string name="change_mobile_success">手机号码修改成功</string>
    <string name="username">Username</string>
    <string name="my_laundry">My Laundry</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="submit_success">提交成功</string>
    <string name="wash_warning">请至少选择一项清洗服务</string>
    <string name="wash_type_warning">请至少选择一项清洗类型</string>
    <string name="address_warning">请填写地址</string>
    <string name="pickup_warning">请填写上门时间</string>
    <string name="deliver_warning">请填写送达时间</string>
    <string name="unit_number">x%d</string>
    <string name="wash_weight_warning">请填写衣服重量</string>
    <string name="wash_meters_warning">请填写地毯面积</string>
    <string name="status_place_holder">Status : %s</string>
    <string name="order_id_place_holder">Order ID : %s</string>
    <string name="pickup_place_holder">Pick Up : %s</string>
    <string name="cancel">Cancel</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="url_facebook">https://www.facebook.com/Picklon-230980007285931/</string>
    <string name="url_twitter">https://twitter.com/picklon</string>
    <string name="url_instagram">https://www.instagram.com/picklon/</string>
    <string name="url_website">http://www.picklon.com</string>
    <string name="save_success">保存成功</string>
    <string name="choose_map_warning">请从地图上选择地址</string>
    <string name="address_list">Address List</string>
    <string name="order_failure">订单信息获取失败,请重试</string>
    <string name="order_distance_minutes">%1$s away, %2$d minutes</string>
    <string name="prefix_store_id">Store ID: %d</string>
    <string name="cancel_order_warning">确定取消订单?</string>

</resources>
