<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
                android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/sign_intro"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_logo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_phone" />

            <View
                style="@style/RedVerticalLine"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/phone_logo" />

            <EditText
                android:id="@+id/login_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/light_red"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lock_logo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_lock" />

            <View
                style="@style/RedVerticalLine"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/lock_logo" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/light_red"
                android:textSize="18sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/login_in"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_transparent"
            android:text="@string/login_in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@drawable/text_color_red" />

    </LinearLayout>

</RelativeLayout>

